[package]
name = "from-via"
version = "0.1.0"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
prockit.workspace = true
derive_more = { workspace = true, features = ["constructor", "from"] }
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full"] }
